--- a/baitapbuoi3.ipynb
+++ b/baitapbuoi3.ipynb
@@ -1,4 +1,18 @@
 {
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
   "cells": [
     {
       "cell_type": "code",
@@ -12,8 +26,8 @@
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Nhập vào một số nguyên n là:1234\n",
             "Các chữ số đảo ngược nhau : 4321\n"
@@ -29,7 +43,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "#bài2\n",
+        "a=int(input(\"Nhập vào số a :\"))\n",
+        "b=int(input(\"Nhập vào số b :\"))\n",
+        "a= a ^ b\n",
+        "b= a ^ b\n",
+        "a= a ^ b\n",
+        "print(\"a=\",a)\n",
+        "print(\"b=\",b)"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -37,10 +60,11 @@
         "id": "SdAX4FiWNw8h",
         "outputId": "63aaf0db-a7ab-4d38-e3bf-2f8faca782a8"
       },
+      "execution_count": null,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Nhập vào số a :2 \n",
             "Nhập vào số b :6\n",
@@ -48,68 +72,39 @@
             "b= 2\n"
           ]
         }
-      ],
-      "source": [
-        "#bài2\n",
-        "a=int(input(\"Nhập vào một số a :\"))\n",
-        "b=int(input(\"Nhập vào một số b :\"))\n",
-        "a= a ^ b\n",
-        "b= a ^ b\n",
-        "a= a ^ b\n",
-        "print(\"a=\",a)\n",
-        "print(\"b=\",b)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "#bài3\n",
+        "n=int(input(\"Nhập vào một số là lũy thừa của 2:\"))\n",
+        "if n>0 and n&(n-1)==0:\n",
+        "  print(\"True\")\n",
+        "else:\n",
+        "  print(\"False\")"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Hj0eyGHCRzIA",
-        "outputId": "b6b5fec4-6b05-4622-824b-93e459237c8f"
+        "outputId": "ae8fe2f7-875a-4d1d-920e-69e870075439"
       },
+      "execution_count": 3,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Nhập vào một số là lũy thừa của 2: 4\n",
+            "Nhập vào một số:4\n",
             "True\n"
           ]
         }
-      ],
-      "source": [
-        "#bài3\n",
-        "n=int(input(\"Nhập vào một số là lũy thừa của 2: \"))\n",
-        "if n>0 and n&(n-1)==0:\n",
-        "  print(\"True\")\n",
-        "else:\n",
-        "  print(\"False\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "yhUcELqDTiIo",
-        "outputId": "db765b21-0e63-4b1e-dfa2-71f8c76afa20"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Nhập số m=2323\n",
-            "Nhập số n=45\n",
-            "Kết quả của phép chia (kết quả làm tròn xuống): 51\n"
-          ]
-        }
-      ],
       "source": [
         "#bài4\n",
         "m=int(input(\"Nhập số m=\"))\n",
@@ -118,29 +113,29 @@
         "  print(\"Không thể chia cho 0\")\n",
         "else:\n",
         "  print(\"Kết quả của phép chia (kết quả làm tròn xuống):\",m//n)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "dhl-s6IQUTm3",
-        "outputId": "394998a3-95eb-4fbb-cac3-a2d760ad95f2"
+        "id": "yhUcELqDTiIo",
+        "outputId": "db765b21-0e63-4b1e-dfa2-71f8c76afa20"
       },
+      "execution_count": 6,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Nhập số a = 2323\n",
-            "Nhập số b = 45\n",
-            "Kết quả của phép chia(kết quả làm tròn lên): 52\n"
+            "Nhập số m=2323\n",
+            "Nhập số n=45\n",
+            "Kết quả của phép chia (kết quả làm tròn xuống): 51\n"
           ]
         }
-      ],
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [
         "#bài5\n",
         "a=int(input(\"Nhập số a = \"))\n",
@@ -149,28 +144,29 @@
         "   print(\"Không thể chia cho 0\")\n",
         "else:\n",
         "   print(\"Kết quả của phép chia(kết quả làm tròn lên):\",(a//b)+1)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "i0d1cZWbVoNX",
-        "outputId": "cb2b6604-a07f-40c3-c945-1f55de86a411"
+        "id": "dhl-s6IQUTm3",
+        "outputId": "394998a3-95eb-4fbb-cac3-a2d760ad95f2"
       },
+      "execution_count": 7,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Nhập vào số dương x: 3\n",
-            "Odd\n"
+            "Nhập số a = 2323\n",
+            "Nhập số b = 45\n",
+            "Kết quả của phép chia(kết quả làm tròn lên): 52\n"
           ]
         }
-      ],
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [
         "#bài6\n",
         "x=int(input(\"Nhập vào số dương x: \"))\n",
@@ -180,29 +176,28 @@
         "  print(\"Even\")\n",
         "else:\n",
         "  print(\"Odd\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "0Offs4OSXNT3",
-        "outputId": "a9f5dd1f-d8bd-493b-fbcb-0f50ea9791b7"
+        "id": "i0d1cZWbVoNX",
+        "outputId": "cb2b6604-a07f-40c3-c945-1f55de86a411"
       },
+      "execution_count": 10,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Nhập số a = 4 \n",
-            "Nhập số b = -1\n",
-            "No\n"
+            "Nhập vào số dương x: 3\n",
+            "Odd\n"
           ]
         }
-      ],
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [
         "#bài7\n",
         "a=int(input(\"Nhập số a = \"))\n",
@@ -211,29 +206,29 @@
         "  print(\"Yes\")\n",
         "else:\n",
         "  print(\"No\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "b2IA84MViqyg",
-        "outputId": "c2ac3c4d-9a10-4418-fa41-f81a885f334f"
+        "id": "0Offs4OSXNT3",
+        "outputId": "a9f5dd1f-d8bd-493b-fbcb-0f50ea9791b7"
       },
+      "execution_count": 12,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Nhập vào chuỗi a: mouse\n",
-            "Nhập vào chuỗi b:dog\n",
-            "True\n"
+            "Nhập số a = 4 \n",
+            "Nhập số b = -1\n",
+            "No\n"
           ]
         }
-      ],
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [
         "#bài8\n",
         "a=input(\"Nhập vào chuỗi a: \")\n",
@@ -242,30 +237,29 @@
         "  print(\"True\")\n",
         "else:\n",
         "  print(\"False\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "JOkSztHHkTbC",
-        "outputId": "155ac5fc-ae26-4182-8d47-119e0fb70c50"
+        "id": "b2IA84MViqyg",
+        "outputId": "c2ac3c4d-9a10-4418-fa41-f81a885f334f"
       },
+      "execution_count": 11,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Độ dài cạnh thứ nhất của tam giác: 10\n",
-            "Độ dài cạnh thứ hai của tam giác: 11\n",
-            "Độ dài cạnh thứ ba của tam giác: -12\n",
-            "No\n"
+            "Nhập vào chuỗi a: mouse\n",
+            "Nhập vào chuỗi b:dog\n",
+            "True\n"
           ]
         }
-      ],
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [
         "#Bài9\n",
         "a=int(input(\"Độ dài cạnh thứ nhất của tam giác: \"))\n",
@@ -275,31 +269,30 @@
         "  print(\"Yes\")\n",
         "else:\n",
         "  print(\"No\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "Ut5H5QULlfAn",
-        "outputId": "5e21240e-f82f-42d7-a3f6-ab78af2fd114"
+        "id": "JOkSztHHkTbC",
+        "outputId": "155ac5fc-ae26-4182-8d47-119e0fb70c50"
       },
+      "execution_count": 13,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Nhập số thứ nhất: 1\n",
-            "Nhập số thứ hai: 2\n",
-            "Nhập số thứ ba: 3\n",
-            "Nhập số thứ tư: 4\n",
-            "Số lớn nhất: 4\n"
+            "Độ dài cạnh thứ nhất của tam giác: 10\n",
+            "Độ dài cạnh thứ hai của tam giác: 11\n",
+            "Độ dài cạnh thứ ba của tam giác: -12\n",
+            "No\n"
           ]
         }
-      ],
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [
         "#bài10\n",
         "a = int(input(\"Nhập số thứ nhất: \"))\n",
@@ -310,30 +303,31 @@
         "so_max = max(a, b, c, d)\n",
         "\n",
         "print(\"Số lớn nhất:\", so_max)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "5hyaL4SSmvt2",
-        "outputId": "27b4eb55-785b-469b-ed11-b6f39bde23d5"
+        "id": "Ut5H5QULlfAn",
+        "outputId": "5e21240e-f82f-42d7-a3f6-ab78af2fd114"
       },
+      "execution_count": 16,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Nhập vào cạnh thứ nhất:1\n",
-            "Nhập vào cạnh thứ hai:2\n",
-            "Nhập vào cạnh thứ ba:4\n",
-            "Đây không phải là tam giác\n"
+            "Nhập số thứ nhất: 1\n",
+            "Nhập số thứ hai: 2\n",
+            "Nhập số thứ ba: 3\n",
+            "Nhập số thứ tư: 4\n",
+            "Số lớn nhất: 4\n"
           ]
         }
-      ],
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [
         "#bài11\n",
         "a=int(input(\"Nhập vào cạnh thứ nhất:\"))\n",
@@ -349,28 +343,30 @@
         "    print(\"Đây là tam giác thường\")\n",
         "else:\n",
         "  print(\"Đây không phải là tam giác\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "nAaoApLarJIC",
-        "outputId": "a9d72b45-801e-4d46-abda-3a3341151fe3"
+        "id": "5hyaL4SSmvt2",
+        "outputId": "27b4eb55-785b-469b-ed11-b6f39bde23d5"
       },
+      "execution_count": null,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Nhập vào năm:2000\n",
-            "Yes\n"
+            "Nhập vào cạnh thứ nhất:1\n",
+            "Nhập vào cạnh thứ hai:2\n",
+            "Nhập vào cạnh thứ ba:4\n",
+            "Đây không phải là tam giác\n"
           ]
         }
-      ],
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [
         "#bài12\n",
         "nam=int(input(\"Nhập vào năm:\"))\n",
@@ -380,28 +376,28 @@
         "  print(\"Yes\")\n",
         "else:\n",
         "  print(\"No\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 1,
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "j12rwtxYrdT5",
-        "outputId": "2eb2da34-e1a2-4a6b-dbd7-47843daa8b19"
+        "id": "nAaoApLarJIC",
+        "outputId": "a9d72b45-801e-4d46-abda-3a3341151fe3"
       },
+      "execution_count": 17,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Nhập vào số kWh điện tiêu thụ :120\n",
-            "Số tiền điện phải trả là: 235000 đồng\n"
+            "Nhập vào năm:2000\n",
+            "Yes\n"
           ]
         }
-      ],
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [
         "#bài13\n",
         "so_dien=int(input(\"Nhập vào số kWh điện tiêu thụ :\"))\n",
@@ -414,29 +410,28 @@
         "else:\n",
         "  tien=50*1500+50*2000+(so_dien-100)*3000\n",
         "print(\"Số tiền điện phải trả là:\",tien,\"đồng\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "uk2OurF1RwW3",
-        "outputId": "150e12e1-820f-4314-d4f2-c4b6fb605fde"
+        "id": "j12rwtxYrdT5",
+        "outputId": "c22dceaf-69b0-4e06-b5a6-876a9c66c83f"
       },
+      "execution_count": 18,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Nhập vào số thực a trong pt (ax+b=0) là :0\n",
-            "Nhập vào số thực b trong pt (ax+b=0) là :0\n",
-            "Phương trình có vô số nghiệm\n"
+            "Nhập vào số kWh điện tiêu thụ :120\n",
+            "Số tiền điện phải trả là: 235000 đồng\n"
           ]
         }
-      ],
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [
         "#bài14\n",
         "a=float(input(\"Nhập vào số thực a trong pt (ax+b=0) là :\"))\n",
@@ -449,28 +444,29 @@
         "else:\n",
         "    nghiem = -b / a\n",
         "    print(\"Nghiệm của phương trình:\", f\"{nghiem:.2f}\")\n"
+      ],
+      "metadata": {
+        "id": "uk2OurF1RwW3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "150e12e1-820f-4314-d4f2-c4b6fb605fde"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nhập vào số thực a trong pt (ax+b=0) là :0\n",
+            "Nhập vào số thực b trong pt (ax+b=0) là :0\n",
+            "Phương trình có vô số nghiệm\n"
+          ]
+        }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "XMfNma2wukjG",
-        "outputId": "18dc24d9-e5d0-4058-8fd5-4af6a936d8e1"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Nhập điểm của học sinh : 2.5\n",
-            "Học lực yếu\n"
-          ]
-        }
-      ],
       "source": [
         "#bài15\n",
         "diem=float(input(\"Nhập điểm của học sinh : \"))\n",
@@ -482,28 +478,28 @@
         "  print(\"Học lực trung bình\")\n",
         "else:\n",
         "  print(\"Học lực yếu\")\n"
+      ],
+      "metadata": {
+        "id": "XMfNma2wukjG",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "18dc24d9-e5d0-4058-8fd5-4af6a936d8e1"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nhập điểm của học sinh : 2.5\n",
+            "Học lực yếu\n"
+          ]
+        }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "oIy9zQZuQDr_",
-        "outputId": "d5360ff3-0934-4a47-ca68-961f661ba348"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Nhập vào một số thực : 7.4\n",
-            "8 7 7\n"
-          ]
-        }
-      ],
       "source": [
         "#bài16\n",
         "a=float(input(\"Nhập vào một số thực : \"))\n",
@@ -532,31 +528,28 @@
         "  else:\n",
         "    tron_gan_nhat=int(a)-1\n",
         "print(tron_len, tron_xuong, tron_gan_nhat )"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "PpRZ6ANVWGQk",
-        "outputId": "0d7dac8d-450c-45df-dc7f-edf1c1f3c3a1"
+        "id": "oIy9zQZuQDr_",
+        "outputId": "d5360ff3-0934-4a47-ca68-961f661ba348"
       },
+      "execution_count": null,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Nhập cạnh thứ nhất của tam giác:6\n",
-            "Nhập cạnh thứ hai của tam giác:5\n",
-            "Nhập cạnh thứ ba của tam giác:6\n",
-            "Đây là một tam giác\n",
-            "Đây là tam giác cân\n"
+            "Nhập vào một số thực : 7.4\n",
+            "8 7 7\n"
           ]
         }
-      ],
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [
         "#bài17\n",
         "a=int(input(\"Nhập cạnh thứ nhất của tam giác:\"))\n",
@@ -570,21 +563,28 @@
         "    print(\"Đây là tam giác cân\")\n",
         "else:\n",
         "  print(\"Đây không phải là tam giác\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PpRZ6ANVWGQk",
+        "outputId": "0d7dac8d-450c-45df-dc7f-edf1c1f3c3a1"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nhập cạnh thứ nhất của tam giác:6\n",
+            "Nhập cạnh thứ hai của tam giác:5\n",
+            "Nhập cạnh thứ ba của tam giác:6\n",
+            "Đây là một tam giác\n",
+            "Đây là tam giác cân\n"
+          ]
+        }
       ]
     }
-  ],
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "display_name": "Python 3",
-      "name": "python3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
-  "nbformat": 4,
-  "nbformat_minor": 0
+  ]
 }
